manifests/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: als
  name: als
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: als-app
  name: als-app
  namespace: als
spec:
  replicas: 1
  selector:
    matchLabels:
      app: als-app
  template:
    metadata:
      labels:
        app: als-app
    spec:
      containers:
        - image: docker.io/juouyang/looking-glass-server:1.0.1
          imagePullPolicy: Always
          name: als
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 10m
              memory: 512Mi
      nodeSelector:
        kubernetes.io/arch: arm64
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: als-app
  name: als-app-service
  namespace: als
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: als-app
